--- a/client/segment_mgr/Cargo.toml
+++ b/client/segment_mgr/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "common"
+name = "segment_mgr"
 version = "0.1.0"
 authors = ["YuZou <hopkings2005@hotmail.com>"]
 edition = "2018"
@@ -7,10 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-toml = "0.5"
-serde_derive = "1.0.119"
-serde = "1.0"
-futures = "0.3"
-bytes = "1"
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
