--- a/client/common/Cargo.toml
+++ b/client/common/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 toml = "0.5"
 serde_derive = "1.0.119"
 serde = "1.0"
+serde_json = "1.0"
 futures = "0.3"
 bytes = "1"
 hyper = { version = "0.14", features = ["full"] }
