--- a/client/yigfs/Cargo.toml
+++ b/client/yigfs/Cargo.toml
@@ -12,3 +12,4 @@ futures = "0.3"
 filesystem_mgr = { path = "../filesystem_mgr" }
 metaservice_mgr = { path = "../metaservice_mgr" }
 common = { path = "../common" }
+segment_mgr = {path = "../segment_mgr"}
