--- a/client/common/Cargo.toml
+++ b/client/common/Cargo.toml
@@ -14,5 +14,7 @@ serde_json = "1.0"
 futures = "0.3"
 bytes = "1"
 time = "0.1"
+hex = "0.4"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
