open the segment when create or open api is called.

--- a/client/segment_mgr/Cargo.toml
+++ b/client/segment_mgr/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 common = {path="../common"}
 metaservice_mgr = {path = "../metaservice_mgr"}
+io_engine = {path = "../io_engine"}
+tokio = { version = "1", features = ["full"] }
