--- a/client/metaservice_mgr/Cargo.toml
+++ b/client/metaservice_mgr/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 common = {path="../common"}
+tokio = { version = "1", features = ["full"] }
