--- a/client/common/Cargo.toml
+++ b/client/common/Cargo.toml
@@ -19,3 +19,4 @@ hyper = { version = "0.14", features = ["full"] }
 hyper-tls = "0.5.0"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
+http = "0.2"
