--- a/client/io_engine/Cargo.toml
+++ b/client/io_engine/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 common = {path = "../common" }
 tokio = { version = "1", features = ["full"] }
+crossbeam-channel = "0.4"
