--- a/client/io_engine/Cargo.toml
+++ b/client/io_engine/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 [dependencies]
 common = {path = "../common" }
+s3 = {path = "../s3"}
 tokio = { version = "1", features = ["full"] }
 crossbeam-channel = "0.4"
