--- a/client/segment_mgr/Cargo.toml
+++ b/client/segment_mgr/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 common = {path="../common"}
 metaservice_mgr = {path = "../metaservice_mgr"}
 io_engine = {path = "../io_engine"}
+yig_backend = { path = "../yig_backend" }
 tokio = { version = "1", features = ["full"] }
 hash_ring = "0.2.0"
 crossbeam-channel = "0.4"
