--- a/client/metaservice_mgr/Cargo.toml
+++ b/client/metaservice_mgr/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 common = {path="../common"}
 tokio = { version = "1", features = ["full"] }
+crossbeam-channel = "0.4"
