--- a/client/common/tests/conf/yigfs.toml
+++ b/client/common/tests/conf/yigfs.toml
@@ -23,6 +23,14 @@ thread_num = 6
 
 [backend_store_config]
 backend_type = 1
+
+[s3_config]
+bucket="mybucket"
+ak="hahahaha"
+sk="hahahaha"
+region="cn-bj-1"
+server = "172.20.13.166"
+
 [backend_store_config.settings]
 bucket="mybucket"
 ak="hahahaha"
@@ -33,3 +41,6 @@ thread_num="6"
 
 [heartbeat_config]
 timeout = 5
+
+[log_path_config]
+log_path = "/etc/yigfs/yigfs_log.yaml"
