--- a/client/yigfs/Cargo.toml
+++ b/client/yigfs/Cargo.toml
@@ -15,3 +15,5 @@ common = { path = "../common" }
 segment_mgr = {path = "../segment_mgr"}
 io_engine = { path = "../io_engine" }
 yig_backend = { path = "../yig_backend" }
+log = "0.4.8"
+log4rs = "0.11.0"
