modify println to log error or info
Signed-off-by: duanjh7 <18204311659@163.com>

--- a/client/filesystem_mgr/Cargo.toml
+++ b/client/filesystem_mgr/Cargo.toml
@@ -14,3 +14,4 @@ crossbeam-channel = "0.4"
 metaservice_mgr = {path = "../metaservice_mgr"}
 segment_mgr = {path = "../segment_mgr"}
 common = {path = "../common" }
+log = "0.4.8"
