--- a/client/metaservice_mgr/Cargo.toml
+++ b/client/metaservice_mgr/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 common = {path="../common"}
 tokio = { version = "1", features = ["full"] }
 crossbeam-channel = "0.4"
+log = "0.4.8"
