--- a/client/yig_backend/Cargo.toml
+++ b/client/yig_backend/Cargo.toml
@@ -12,3 +12,4 @@ io_engine = { path = "../io_engine" }
 s3 = { path = "../s3" }
 crossbeam-channel = "0.4"
 tokio = { version = "1", features = ["full"]}
+log = "0.4.8"
